# service_scheduling

./: .gitignore  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml  tasks.py
appointment/: models.py  serializers.py  tasks.py  urls.py  views.py
appointment/migrations/: 0001_initial.py  0002_initial.py
service_scheduling/: asgi.py  settings.py  urls.py  wsgi.py
user/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py
